create-home-section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,31 @@
     </div>
     <!-- End Header -->
 
+    <!-- Home -->
+    <section class="home" id="home">
+        <div class="row">
+            <div class="image">
+                <img src="./image/home.png" alt="">
+            </div>
+            <div class="content">
+                <h3>Welcome to the website for downloading Android apps❤️</h3>
+                <p>This template was created by Hossam Shahmoradi ( Draclyr ) and is available for free on GitHub and
+                    this template
+                    is based on html,
+                    css and javascript.</p>
+                <p>This template has special features such as night and day theme, which is made without relying on
+                    virtual libraries.
+                    Other features such as responsive drop down menu and professional search box are also available in
+                    this project.
+                    More details are available in the README.MD file😇</p>
+                <a href="https://github.com/draclyr" class="btn">Draclyr Github</a>
+            </div>
+
+        </div>
+    </section>
+    <!-- End Home -->
+
+
     <script src="js/script.js"></script>
     <script src="js/theme.js"></script>
 </body>
