--- a/index.html
+++ b/index.html
@@ -64,6 +64,101 @@
     </section>
     <!-- End Home -->
 
+    <!-- Apps -->
+    <section class="apps" id="apps">
+
+        <h2><i class="fa fa-mobile"></i> Apps</h2>
+
+        <div class="box-container">
+
+            <div class="box">
+                <img src="./image/apps.png" alt="">
+                <h3>App 1</h3>
+                <p>Descriptions about the game or app</p>
+                <a href="#" class="btn">Download</a>
+            </div>
+
+            <div class="box">
+                <img src="./image/apps.png" alt="">
+                <h3>App 2</h3>
+                <p>Descriptions about the game or app</p>
+                <a href="#" class="btn">Download</a>
+            </div>
+
+            <div class="box">
+                <img src="./image/apps.png" alt="">
+                <h3>App 3</h3>
+                <p>Descriptions about the game or app</p>
+                <a href="#" class="btn">Download</a>
+            </div>
+
+            <div class="box">
+                <img src="./image/apps.png" alt="">
+                <h3>App 4</h3>
+                <p>Descriptions about the game or app</p>
+                <a href="#" class="btn">Download</a>
+            </div>
+
+            <div class="box">
+                <img src="./image/apps.png" alt="">
+                <h3>App 5</h3>
+                <p>Descriptions about the game or app</p>
+                <a href="#" class="btn">Download</a>
+            </div>
+
+        </div>
+
+        <a href="#" class="btn">SEE MORE</a>
+    </section>
+    <!-- End Apps -->
+
+    <!-- GAMES -->
+    <section class="apps" id="apps">
+
+        <h2><i class="fa fa-gamepad"></i> GAMES</h2>
+
+        <div class="box-container">
+
+            <div class="box">
+                <img src="./image/apps.png" alt="">
+                <h3>Game 1</h3>
+                <p>Descriptions about the game or app</p>
+                <a href="#" class="btn">Download</a>
+            </div>
+
+            <div class="box">
+                <img src="./image/apps.png" alt="">
+                <h3>Game 2</h3>
+                <p>Descriptions about the game or app</p>
+                <a href="#" class="btn">Download</a>
+            </div>
+
+            <div class="box">
+                <img src="./image/apps.png" alt="">
+                <h3>Game 3</h3>
+                <p>Descriptions about the game or app</p>
+                <a href="#" class="btn">Download</a>
+            </div>
+
+            <div class="box">
+                <img src="./image/apps.png" alt="">
+                <h3>Game 4</h3>
+                <p>Descriptions about the game or app</p>
+                <a href="#" class="btn">Download</a>
+            </div>
+
+            <div class="box">
+                <img src="./image/apps.png" alt="">
+                <h3>Game 5</h3>
+                <p>Descriptions about the game or app</p>
+                <a href="#" class="btn">Download</a>
+            </div>
+
+        </div>
+
+        <a href="#" class="btn">SEE MORE</a>
+    </section>
+    <!-- End GAMES -->
 
     <script src="js/script.js"></script>
     <script src="js/theme.js"></script>
