--- a/index.html
+++ b/index.html
@@ -59,106 +59,117 @@
                     More details are available in the README.MD file😇</p>
                 <a href="https://github.com/draclyr" class="btn">Draclyr Github</a>
             </div>
-
         </div>
     </section>
     <!-- End Home -->
 
     <!-- Apps -->
     <section class="apps" id="apps">
-
-        <h2><i class="fa fa-mobile"></i> Apps</h2>
-
+        <h2><i class="fa fa-mobile"></i> APPS</h2>
         <div class="box-container">
-
             <div class="box">
                 <img src="./image/apps.png" alt="">
                 <h3>App 1</h3>
                 <p>Descriptions about the game or app</p>
                 <a href="#" class="btn">Download</a>
             </div>
-
             <div class="box">
                 <img src="./image/apps.png" alt="">
                 <h3>App 2</h3>
                 <p>Descriptions about the game or app</p>
                 <a href="#" class="btn">Download</a>
             </div>
-
             <div class="box">
                 <img src="./image/apps.png" alt="">
                 <h3>App 3</h3>
                 <p>Descriptions about the game or app</p>
                 <a href="#" class="btn">Download</a>
             </div>
-
             <div class="box">
                 <img src="./image/apps.png" alt="">
                 <h3>App 4</h3>
                 <p>Descriptions about the game or app</p>
                 <a href="#" class="btn">Download</a>
             </div>
-
             <div class="box">
                 <img src="./image/apps.png" alt="">
                 <h3>App 5</h3>
                 <p>Descriptions about the game or app</p>
                 <a href="#" class="btn">Download</a>
             </div>
-
         </div>
-
         <a href="#" class="btn">SEE MORE</a>
     </section>
     <!-- End Apps -->
 
-    <!-- GAMES -->
+    <!-- Games -->
     <section class="apps" id="apps">
-
         <h2><i class="fa fa-gamepad"></i> GAMES</h2>
-
         <div class="box-container">
-
             <div class="box">
                 <img src="./image/apps.png" alt="">
                 <h3>Game 1</h3>
                 <p>Descriptions about the game or app</p>
                 <a href="#" class="btn">Download</a>
             </div>
-
             <div class="box">
                 <img src="./image/apps.png" alt="">
                 <h3>Game 2</h3>
                 <p>Descriptions about the game or app</p>
                 <a href="#" class="btn">Download</a>
             </div>
-
             <div class="box">
                 <img src="./image/apps.png" alt="">
                 <h3>Game 3</h3>
                 <p>Descriptions about the game or app</p>
                 <a href="#" class="btn">Download</a>
             </div>
-
             <div class="box">
                 <img src="./image/apps.png" alt="">
                 <h3>Game 4</h3>
                 <p>Descriptions about the game or app</p>
                 <a href="#" class="btn">Download</a>
             </div>
-
             <div class="box">
                 <img src="./image/apps.png" alt="">
                 <h3>Game 5</h3>
                 <p>Descriptions about the game or app</p>
                 <a href="#" class="btn">Download</a>
             </div>
-
         </div>
-
         <a href="#" class="btn">SEE MORE</a>
     </section>
-    <!-- End GAMES -->
+    <!-- End Games -->
+
+    <!-- Contact -->
+    <section class="contact" id="contact">
+        <h1 class="heading"><i class="fa fa-phone"></i> <span>contact</span> us </h1>
+        <div class="row">
+            <iframe class="map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83998.9185124463!2d2.347035!3d48.85885484999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e1f06e2b70f%3A0x40b82c3688c9460!2sParis%2C%20France!5e0!3m2!1sen!2sie!4v1728843722197!5m2!1sen!2sie"
+                allowfullscreen="" loading="lazy">
+            </iframe>
+            <form action="">
+                <h3>contact section</h3>
+                <div class="inputBox">
+                    <span class="fas fa-user"></span>
+                    <input type="text" placeholder="name">
+                </div>
+                <div class="inputBox">
+                    <span class="fas fa-envelope"></span>
+                    <input type="email" placeholder="email">
+                </div>
+                <div class="inputBox">
+                    <span class="fas fa-phone"></span>
+                    <input type="number" placeholder="number">
+                </div>
+                <input type="submit" value="contact now" class="btn">
+            </form>
+        </div>
+
+    </section>
+    <!-- End Contact -->
+
 
     <script src="js/script.js"></script>
     <script src="js/theme.js"></script>
