--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </a>
         <nav class="navbar">
             <a href="#home"><i class="fa fa-home"></i>home</a>
+            <a href="#special-posts"><i class="fa fa-star"></i>special</a>
             <a href="#apps"><i class="fa fa-mobile"></i>apps</a>
             <a href="#contact"><i class="fa fa-phone"></i>contact</a>
         </nav>
@@ -62,6 +63,47 @@
         </div>
     </section>
     <!-- End Home -->
+
+    <!-- Special-Posts  -->
+    <section class="special-posts" id="special-posts">
+        <h1 class="heading"><i class="fa fa-star"></i> <span>Special </span>posts </h1>
+        <div class="box-container">
+            <div class="box">
+                <div class="image">
+                    <img src="./image/game.jpg" alt="">
+                </div>
+                <div class="content">
+                    <a href="#" class="title">title</a>
+                    <span><i class="fa fa-calendar"></i> 2024.0.0</span>
+                    <p>Descriptions about the game or app.</p>
+                    <a href="#" class="btn">Download</a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="./image/game.jpg" alt="">
+                </div>
+                <div class="content">
+                    <a href="#" class="title">title</a>
+                    <span><i class="fa fa-calendar"></i> 2024.0.0</span>
+                    <p>Descriptions about the game or app.</p>
+                    <a href="#" class="btn">Download</a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="./image/game.jpg" alt="">
+                </div>
+                <div class="content">
+                    <a href="#" class="title">title</a>
+                    <span><i class="fa fa-calendar"></i> 2024.0.0</span>
+                    <p>Descriptions about the game or app.</p>
+                    <a href="#" class="btn">Download</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Special-Posts -->
 
     <!-- Apps -->
     <section class="apps" id="apps">
