--- a/index.html
+++ b/index.html
@@ -212,6 +212,22 @@
     </section>
     <!-- End Contact -->
 
+    <!-- Footer -->
+    <div class="footer">
+        <div class="social-icons-container">
+            <div class="share">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-pinterest"></i></a>
+            </div>
+            <div class="mr-draclyr">
+                © 2024 create by Hesam Shahmoradi "Draclyr"
+            </div>
+        </div>
+    </div>
+    <!-- End Footer -->
 
     <script src="js/script.js"></script>
     <script src="js/theme.js"></script>
