--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ronic</title>
+    <link rel="icon" href="./image/icon.jpeg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
@@ -229,6 +230,7 @@
     </div>
     <!-- End Footer -->
 
+    <!-- create by Hesam Shahmoradi ( Draclyr ) -->
     <script src="js/script.js"></script>
     <script src="js/theme.js"></script>
 </body>
